<resources>
    <string name="app_name">Ticket search app</string>
    <string name="airline_tickets">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="in_short">Короче</string>
    <string name="subscriptions">Подписки</string>
    <string name="profile">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finding_cheap_tickets">Поиск дешевых авиабилетов</string>
    <string name="from_moscow">Откуда - Москва</string>
    <string name="to_turkey">Куда - Турция</string>
    <string name="musically_fly">Музыкально отлететь</string>
    <string name="difficult_route">Сложный маршрут</string>
    <string name="anywhere">Куда угодно</string>
    <string name="Weekend">Выходные</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="Istanbul">Стамбул</string>
    <string name="popular_destination">Популярное направление</string>
    <string name="Sochi">Сочи</string>
    <string name="phuket">Пхукет</string>
</resources>